--- a/vidmgr/changelog.txt
+++ b/vidmgr/changelog.txt
@@ -68,3 +68,9 @@ Version 2.2a - 4/10/2013
 Version 2.2b - 4/24/2013
 - added a new grouping item - alpha - to break virtual shares into folders based on the first character of their title item.  Also 
   allowed  grouping with a list that had been previously disallowed.
+  
+ Version 2.2c - 5/8/2013
+ - fix a bug that caused a crash when pushing a video if the sortroot option is True and a virtual
+ share sorts into the first position
+ - added the name(s) of tivo's pushed to when adding push data to the meta file.  Changed setting savepushdate to savepushdata
+ to encompass this additional functionality, but retained the name savepushdate for backward compatability.  The names are synonyms.
